manifests/overlays/prod/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: 82265604
  namespace: 82265604
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: 82265604
          command: ["java","-jar","/app.jar"]
          args: ["--spring.config.location=file:/config/application.yml"]
          volumeMounts:
            - mountPath: /mnt/82265604
              name: 82265604-volume
              readOnly: false
              subPath: 82265604
            - mountPath: /config
              name: application-properties
              readOnly: true

      volumes:
        - name: 82265604-volume
          persistentVolumeClaim:
            claimName: ce-aa-pvc
        - name: application-properties
          configMap:
            name: 82265604-configmap
            items:
              - key: application.yml
                path: application.yml
            defaultMode: 420
