manifests/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 82265604-ingress
  namespace: 82265604
spec:
  ingressClassName: ingress-internal
  rules:
    - host: 82265604.ce-aa.kubepia.net
      http:
        paths:
          - path: /
            backend:
              service:
                name: 82265604-service
                port:
                  number: 8080
            pathType: Prefix
